# urweb

./: .gitignore  .hgignore  .mailmap  .travis.yml  CHANGELOG  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  build.bgb  config.h.in  configure  configure.ac  default.nix  derivation.nix  shell.nix  urweb.ebuild
caching-tests/: bench.lua  bench.ur  bench.urp  bench.urs  some-results.txt  test.db  test.sql  test.ur  test.urp  test.urs
demo/: README.md  alert.ur  alert.urp  batch.ur  batch.urp  batchFun.ur  batchFun.urp  batchFun.urs  batchG.ur  batchG.urp  broadcast.ur  broadcast.urs  buffer.ur  buffer.urs  chat.ur  chat.urp  constraints.ur  constraints.urp  cookie.ur  cookie.urp  cookieSec.ur  cookieSec.urp  counter.ur  counter.urp  crud.ur  crud.urp  crud.urs  crud1.ur  crud1.urp  crud2.sql  crud2.ur  crud2.urp  crud3.ur  crud3.urp  css.ur  css.urp  form.ur  form.urp  hello.ur  hello.urs  (+72 more)
demo/more/: bid.ur  bid.urs  bulkEdit.ur  bulkEdit.urs  checkGroup.ur  checkGroup.urs  conference.ur  conference.urp  conference.urs  conference1.ur  conference1.urp  conferenceFields.ur  conferenceFields.urs  dbgrid.ur  dbgrid.urs  decision.ur  decision.urs  dlist.ur  dlist.urs  dnat.ur  dnat.urs  dragList.ur  dragList.urp  expandable.ur  expandable.urs  grid.ur  grid.urp  grid.urs  grid0.ur  grid0.urp  grid1.ur  grid1.urp  meta.ur  meta.urs  orm.ur  orm.urp  orm.urs  orm1.ur  orm1.urp  prose  (+7 more)
demo/webrtc_signalling_client_only/: custom.js  index2.html
doc/: LICENSE  Makefile  intro.ur  manual.tex  tlc.ur
include/: lacweb.h  request.h  types.h  urweb.h
include/urweb/: config.h.in  queue.h  request.h  types.h  types_cpp.h  urweb.h  urweb_cpp.h  winshim.h
jslib/: urweb.js
lib/: basis.lig  basis.urs  top.ur  top.urs
lib/js/: urweb.js
lib/ur/: basis.urs  char.ur  char.urs  datetime.ur  datetime.urs  incl.ur  incl.urs  json.ur  json.urs  list.ur  list.urs  listPair.ur  listPair.urs  mem.ur  mem.urs  monad.ur  monad.urs  option.ur  option.urs  string.ur  string.urs  top.ur  top.urs
m4/: ax_check_icu.m4  ax_check_openssl.m4  m4_ax_pthread.m4
sqlcache-tests/: test.ur  test.urp
src/: bg_thread.dummy.sml  bg_thread.mlton.sml  bg_thread.sig  bg_thread.sml  cache.sml  cgi.sig  cgi.sml  checknest.sig  checknest.sml  cjr.sml  cjr_env.sig  cjr_env.sml  cjr_print.sig  cjr_print.sml  cjrize.sig  cjrize.sml  cloconv.sig  cloconv.sml  compiler.mlb  compiler.sig  compiler.sml  config.sig  config.sml.in  core.sml  core_env.sig  core_env.sml  core_print.sig  core_print.sml  core_untangle.sig  core_untangle.sml  core_util.sig  core_util.sml  corify.sig  corify.sml  css.sig  css.sml  datatype_kind.sml  dbmodecheck.sig  dbmodecheck.sml  defunc.sig  (+185 more)
src/c/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  cgi.c  driver.c  fastcgi.c  fastcgi.h  http.c  lacweb.c  memmem.c  memmem.h  mhash.c  openssl.c  queue.c  request.c  static.c  urweb.c
src/coq/: Axioms.v  Makefile  Name.v  README  Semantics.v  Syntax.v  _CoqProject
src/elisp/: urweb-compat.el  urweb-defs.el  urweb-flycheck.el  urweb-mode-startup.el  urweb-mode.el  urweb-move.el  urweb-util.el
tests/: DynChannel.py  DynChannel.ur  DynChannel.urp  Makefile  README  a_case_of_the_splits.py  a_case_of_the_splits.ur  a_case_of_the_splits.urp  aborter.py  aborter.sql  aborter.ur  aborter.urp  aborter2.py  aborter2.ur  aborter2.urp  active.py  active.ur  activeBlock.py  activeBlock.ur  activeEmpty.py  activeEmpty.ur  activeFocus.py  activeFocus.ur  agg.lac  agg.py  agg.ur  agg.urp  ahead.py  ahead.ur  alert.py  alert.ur  alert.urp  align.py  align.ur  ambig.ur  appjs.py  appjs.ur  arel.ur  ascdesc.py  ascdesc.ur  (+779 more)
tests/aux/: aux.ur
xml/: parse.sml
